--- a/style.css
+++ b/style.css
@@ -58,8 +58,7 @@ body {
 }
 
 #content {
-    
-    background-color: mediumspringgreen;
+    background-color: none;
 
     width: 100%;
     height: 100%;
@@ -148,3 +147,63 @@ body {
 }
 
 
+@media screen and (max-width: 1050px), screen and (max-height: 520px) {
+    html, body {
+        min-height: 550px;
+
+        height: 100%;
+        width: 100%;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #container {
+        height: 100%;
+        width: 100%;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        border-radius: 0;
+    }
+
+    #content {
+        height: auto;
+
+        display: flex;
+        flex-direction: column;
+    }
+
+    #social-medias {
+        align-items: center;
+    }
+
+    #presentation {
+        padding: 25px 25px;
+    }
+
+    #presentation > h1 {
+        font-size: 50px;
+    }
+}
+
+@media screen and (max-width: 360px) ,screen and (max-height: 450px) {
+    #presentation {
+        padding: 10px 10px;
+    }
+
+    #presentation > h1, #presentation > p{
+        transform: scale(85%);
+    }
+
+    #social-medias > div, #social-medias > span{
+        transform: scale(85%);
+    }
+
+    #container {
+        display: inline;
+    }
+}
